--- a/style.css
+++ b/style.css
@@ -9,4 +9,14 @@ body {
   font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+}
+
+.container {
+  background-color: #fff;
+  border: 3px #000 solid;
+  border-radius: 10px;
 }
