--- a/style.css
+++ b/style.css
@@ -19,4 +19,14 @@ body {
   background-color: #fff;
   border: 3px #000 solid;
   border-radius: 10px;
+  padding: 30px;
+  max-width: 1000px;
+  text-align: center;
+}
+
+.code-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
 }
