--- a/style.css
+++ b/style.css
@@ -30,3 +30,16 @@ body {
   justify-content: center;
   margin: 40px 0;
 }
+
+.code {
+  caret-color: transparent;
+  border-radius: 5px;
+  font-size: 75px;
+  height: 120px;
+  width: 100px;
+  border: 1px solid #eee;
+  margin: 1%;
+  text-align: center;
+  font-weight: 300;
+  -moz-appearance: textfield;
+}
