--- a/style.css
+++ b/style.css
@@ -49,3 +49,14 @@ body {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.code:valid {
+  border-color: #3498db;
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
+}
+
+.info {
+  background-color: #eaeaea;
+  display: inline-block;
+  padding: 10px;
+}
