--- a/style.css
+++ b/style.css
@@ -61,8 +61,14 @@ body {
   padding: 10px;
 }
 
-.code {
-  font-size: 60px;
-  height: 80px;
-  max-width: 70px;
+@media (max-width: 600px) {
+  .code-container {
+    flex-wrap: wrap;
+  }
+  
+  .code {
+    font-size: 60px;
+    height: 80px;
+    max-width: 70px;
+  }
 }
