--- a/style.css
+++ b/style.css
@@ -59,13 +59,17 @@ body {
   background-color: #eaeaea;
   display: inline-block;
   padding: 10px;
+  line-height: 20px;
+  max-width: 400px;
+  color: #777;
+  border-radius: 5px;
 }
 
 @media (max-width: 600px) {
   .code-container {
     flex-wrap: wrap;
   }
-  
+
   .code {
     font-size: 60px;
     height: 80px;
