--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ body {
 .info {
   background-color: #eaeaea;
   display: inline-block;
-  padding: 20px;
-  line-height: 25px;
+  padding: 10px;
+  line-height: 20px;
   max-width: 400px;
   color: #777;
-  border-radius: 10px;
-}
+  border-radius: 5px;
+}.
 
 @media (max-width: 600px) {
   .code-container {
