--- a/style.css
+++ b/style.css
@@ -1,78 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Muli:300,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  background-color: #fbfcfe;
-  font-family: 'Muli', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 95vh;
-  overflow: hidden;
-  margin: 5;
-}
-
-.container {
-  background-color: #fff;
-  border: 5px #000 solid;
-  border-radius: 30px;
-  padding: 55px;
-  max-width: 995px;
-  text-align: center;
-}
-
-.code-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 50px 0;
-}
-
-.code {
-  caret-color: transparent;
-  border-radius: 15px;
-  font-size: 75px;
-  height: 130px;
-  width: 100px;
-  border: 5px solid #eee;
-  margin: 5%;
-  text-align: center;
-  font-weight: 295;
-  -moz-appearance: textfield;
-}
-
-.code::-webkit-outer-spin-button,
-.code::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.code:valid {
-  border-color: #3498db;
-  box-shadow: 0 10px 15px -5px rgba(0, 0, 0, 0.25);
-}
-
-.info {
-  background-color: #eaeaea;
-  display: inline-block;
-  padding: 15px;
-  line-height: 25px;
-  max-width: 395px;
-  color: #777;
-  border-radius: 15px;
-}.
-
-@media (max-width: 600px) {
-  .code-container {
-    flex-wrap: wrap;
-  }
-
-  .code {
-    font-size: 65px;
-    height: 80px;
-    max-width: 75px;
-  }
 }
