--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  background-color: #fafafa;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+}
