--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@ body {
   height: 100vh;
   overflow: hidden;
 }
+
+.magic {
+  background-color: #f9ca24;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  border: 0;
+  border-radius: 3px;
+  font-size: 16px;
+  padding: 12px 20px;
+}
