--- a/style.css
+++ b/style.css
@@ -24,4 +24,10 @@ body {
   border-radius: 3px;
   font-size: 16px;
   padding: 12px 20px;
+  cursor: pointer;
+  position: fixed;
+  top: 20px;
+  letter-spacing: 1px;
+  box-shadow: 0 3px rgba(249, 202, 36, 0.5);
+  z-index: 100;
 }
