--- a/style.css
+++ b/style.css
@@ -31,3 +31,12 @@ body {
   box-shadow: 0 3px rgba(249, 202, 36, 0.5);
   z-index: 100;
 }
+
+.magic:focus {
+  outline: none;
+}
+
+.magic:active {
+  box-shadow: none;
+  transform: translateY(2px);
+}
