--- a/style.css
+++ b/style.css
@@ -40,3 +40,13 @@ body {
   box-shadow: none;
   transform: translateY(2px);
 }
+
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 500px;
+  width: 500px;
+  position: relative;
+  transition: 0.4s ease;
+}
