--- a/style.css
+++ b/style.css
@@ -50,3 +50,13 @@ body {
   position: relative;
   transition: 0.3s ease;
 }
+.box::before {
+  content: '';
+  background-color: #f9ca24;
+  position: absolute;
+  bottom: -15px;
+  left: 8px;
+  height: 15px;
+  width: 100%;
+  transform: skewX(45deg);
+}
