--- a/style.css
+++ b/style.css
@@ -50,6 +50,18 @@ body {
   position: relative;
   transition: 0.3s ease;
 }
+
+.box::after {
+  content: '';
+  background-color: #f6e58d;
+  position: absolute;
+  top: 8px;
+  right: -15px;
+  height: 100%;
+  width: 15px;
+  transform: skewY(45deg);
+}
+
 .box::before {
   content: '';
   background-color: #f9ca24;
