--- a/style.css
+++ b/style.css
@@ -41,6 +41,17 @@ body {
   transform: translateY(2px);
 }
 
+.box {
+  background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
+  background-repeat: no-repeat;
+  background-size: 500px 500px;
+  position: relative;
+  height: 125px;
+  width: 125px;
+  transition: 0.4s ease;
+}
+
+
 .boxes {
   display: flex;
   flex-wrap: wrap;
