--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@ body {
   transform: translateY(2px);
 }
 
+.boxes.big {
+  width: 600px;
+  height: 600px;
+}
+
+.boxes.big .box {
+  transform: rotateZ(360deg);
+}
+
 .box {
   background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
   background-repeat: no-repeat;
