--- a/style.css
+++ b/style.css
@@ -41,6 +41,22 @@ body {
   transform: translateY(2px);
 }
 
+.magic-xxl {
+  background-color: #f9ca24;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  border: 0;
+  border-radius: 3px;
+  font-size: 16px;
+  padding: 12px 20px;
+  cursor: pointer;
+  position: fixed;
+  top: 20px;
+  letter-spacing: 1px;
+  box-shadow: 0 3px rgba(249, 202, 36, 0.5);
+  z-index: 100;
+}
+
 .boxes.big {
   width: 600px;
   height: 600px;
