--- a/style.css
+++ b/style.css
@@ -6,14 +6,12 @@
 }
 
 body {
-  background-color: #fafafa;
   font-family: 'Roboto', sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  overflow: hidden;
+  margin: 0;
 }
 
 .magic {
