--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
   margin: 0;
 }
 
+img {
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+}
+
 .magic {
   background-color: #f9ca24;
   color: #fff;
