--- a/style.css
+++ b/style.css
@@ -20,6 +20,17 @@ img {
   object-fit: cover;
 }
 
+.image-container {
+  display: flex;
+  transform: translateX(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .magic {
   background-color: #f9ca24;
   color: #fff;
