--- a/style.css
+++ b/style.css
@@ -102,24 +102,11 @@ img {
   transition: 0.3s ease;
 }
 
-.box::after {
-  content: '';
-  background-color: #f6e58d;
-  position: absolute;
-  top: 8px;
-  right: -15px;
-  height: 100%;
-  width: 15px;
-  transform: skewY(45deg);
-}
-
-.box::before {
-  content: '';
-  background-color: #f9ca24;
-  position: absolute;
-  bottom: -15px;
-  left: 8px;
-  height: 15px;
-  width: 100%;
-  transform: skewX(45deg);
+.btn {
+  background-color: rebeccapurple;
+  color: #fff;
+  border: none;
+  padding: 0.5rem;
+  cursor: pointer;
+  width: 49.5%;
 }
