--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,114 +6,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 95vh;
   margin: 0;
-}
-
-img {
-  width: 400px;
-  height: 490px;
-  object-fit: cover;
-}
-
-.image-container {
-  display: flex;
-  transform: translateX(0);
-  transition: transform 0.7s ease-in-out;
-}
-
-.buttons-container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.magic {
-  background-color: #f9ca24;
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  border: 0;
-  border-radius: 3px;
-  font-size: 15px;
-  padding: 12px 20px;
-  cursor: pointer;
-  position: fixed;
-  top: 25px;
-  letter-spacing: 1px;
-  box-shadow: 0 3px rgba(249, 202, 36, 0.5);
-  z-index: 95;
-}
-
-.magic:focus {
-  outline: none;
-}
-
-.magic:active {
-  box-shadow: none;
-  transform: translateY(2px);
-}
-
-.magic-xxl {
-  background-color: #f9ca24;
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  border: 0;
-  border-radius: 3px;
-  font-size: 16px;
-  padding: 12px 20px;
-  cursor: pointer;
-  position: fixed;
-  top: 20px;
-  letter-spacing: 1px;
-  box-shadow: 0 3px rgba(249, 202, 36, 0.5);
-  z-index: 100;
-}
-
-.boxes.big {
-  width: 600px;
-  height: 600px;
-}
-
-.boxes.big .box {
-  transform: rotateZ(360deg);
-}
-
-.box {
-  background-image: url('https://media.giphy.com/media/EZqwsBSPlvSda/giphy.gif');
-  background-repeat: no-repeat;
-  background-size: 500px 500px;
-  position: relative;
-  height: 125px;
-  width: 125px;
-  transition: 0.4s ease;
-}
-
-
-.boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  height: 490px;
-  width: 490px;
-  position: relative;
-  transition: 0.3s ease;
-}
-
-.btn {
-  background-color: rebeccapurple;
-  color: #fff;
-  border: none;
-  padding: 0.5rem;
-  cursor: pointer;
-  width: 49.5%;
-}
-
-.btn:hover {
-  opacity: 0.9;
-}
-
-.btn:focus {
-  outline: none;
+  height: 100vh;
+  overflow: hidden;
 }
