--- a/style.css
+++ b/style.css
@@ -28,3 +28,16 @@ h4 {
 .counter.hide {
   transform: translate(-50%, -50%) scale(0);
   animation: hide 0.2s ease-out;
+}
+
+
+
+@keyframes hide {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(0);
+  }
+}
