--- a/style.css
+++ b/style.css
@@ -41,3 +41,12 @@ h4 {
     transform: translate(-50%, -50%) scale(0);
   }
 }
+
+
+.final {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  text-align: center;
+}
