--- a/style.css
+++ b/style.css
@@ -50,3 +50,8 @@ h4 {
   transform: translate(-50%, -50%) scale(0);
   text-align: center;
 }
+
+.final.show {
+  transform: translate(-50%, -50%) scale(1);
+  animation: show 0.2s ease-out;
+}
