--- a/style.css
+++ b/style.css
@@ -55,3 +55,12 @@ h4 {
   transform: translate(-50%, -50%) scale(1);
   animation: show 0.2s ease-out;
 }
+
+.nums {
+  color: #3498db;
+  font-size: 50px;
+  position: relative;
+  overflow: hidden;
+  width: 250px;
+  height: 50px;
+}
