--- a/style.css
+++ b/style.css
@@ -64,3 +64,11 @@ h4 {
   width: 250px;
   height: 50px;
 }
+
+.nums span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(120deg);
+  transform-origin: bottom center;
+}
