--- a/style.css
+++ b/style.css
@@ -11,23 +11,22 @@ body {
   overflow: hidden;
 }
 
-h4 {
-  font-size: 20px;
-  margin: 5px;
-  text-transform: uppercase;
-}
 
-.counter {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
 
 .counter.hide {
   transform: translate(-50%, -50%) scale(0);
   animation: hide 0.2s ease-out;
+}
+
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  width: 200px;
+}
+
+.toggle {
+  visibility: hidden;
 }
 
 
