--- a/style.css
+++ b/style.css
@@ -29,45 +29,13 @@ body {
   visibility: hidden;
 }
 
-
-
-@keyframes hide {
-  0% {
-    transform: translate(-50%, -50%) scale(1);
-  }
-
-  100% {
-    transform: translate(-50%, -50%) scale(0);
-  }
-}
-
-
-.final {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  text-align: center;
-}
-
-.final.show {
-  transform: translate(-50%, -50%) scale(1);
-  animation: show 0.2s ease-out;
-}
-
-.nums {
-  color: #3498db;
-  font-size: 50px;
+.label {
   position: relative;
-  overflow: hidden;
-  width: 250px;
-  height: 50px;
-}
-
-.nums span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(120deg);
-  transform-origin: bottom center;
+  background-color: #d0d0d0;
+  border-radius: 50px;
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 15px 0;
+  width: 80px;
+  height: 40px;
 }
