--- a/style.css
+++ b/style.css
@@ -39,3 +39,16 @@ body {
   width: 80px;
   height: 40px;
 }
+
+.ball {
+  background: #fff;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  align-items: center;
+  justify-content: center;
+  animation: slideOff 0.3s linear forwards;
+}
