--- a/style.css
+++ b/style.css
@@ -52,3 +52,7 @@ body {
   justify-content: center;
   animation: slideOff 0.3s linear forwards;
 }
+
+.toggle:checked + .label .ball {
+  animation: slideOn 0.3s linear forwards;
+}
