--- a/style.css
+++ b/style.css
@@ -56,3 +56,15 @@ body {
 .toggle:checked + .label .ball {
   animation: slideOn 0.3s linear forwards;
 }
+
+@keyframes slideOn {
+  0% {
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    transform: translateX(20px) scale(1.2);
+  }
+  100% {
+    transform: translateX(40px) scale(1);
+  }
+}
