--- a/style.css
+++ b/style.css
@@ -68,3 +68,15 @@ body {
     transform: translateX(40px) scale(1);
   }
 }
+
+@keyframes slideOn {
+  0% {
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    transform: translateX(20px) scale(1.2);
+  }
+  100% {
+    transform: translateX(40px) scale(1);
+  }
+}
