--- a/style.css
+++ b/style.css
@@ -5,39 +5,17 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+  background-color: #3b3b98;
+  color: #fff;
+  font-family: 'Muli', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   overflow: hidden;
-}
-
-
-
-.counter.hide {
-  transform: translate(-50%, -50%) scale(0);
-  animation: hide 0.2s ease-out;
-}
-
-.toggle-container {
-  display: flex;
-  align-items: center;
-  margin: 10px 0;
-  width: 200px;
-}
-
-.toggle {
-  visibility: hidden;
-}
-
-.label {
-  position: relative;
-  background-color: #d0d0d0;
-  border-radius: 50px;
-  cursor: pointer;
-  display: inline-block;
-  margin: 0 15px 0;
-  width: 80px;
-  height: 40px;
+  padding: 10px;
+  margin: 0;
 }
 
 .ball {
