--- a/style.css
+++ b/style.css
@@ -18,6 +18,19 @@ body {
   margin: 0;
 }
 
+h2 {
+  margin: 10px 0 20px;
+  text-align: center;
+}
+
+.container {
+  background-color: #23235b;
+  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  width: 350px;
+  max-width: 100%;
+}
+
 .ball {
   background: #fff;
   height: 34px;
