--- a/style.css
+++ b/style.css
@@ -31,6 +31,19 @@ h2 {
   max-width: 100%;
 }
 
+.result-container {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  font-size: 18px;
+  letter-spacing: 1px;
+  padding: 12px 10px;
+  height: 50px;
+  width: 100%;
+}
+
 .ball {
   background: #fff;
   height: 34px;
