--- a/style.css
+++ b/style.css
@@ -94,3 +94,10 @@ result-container .btn {
   display: block;
   width: 100%;
 }
+
+.setting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
